--- a/style.css
+++ b/style.css
@@ -1,27 +1,56 @@
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+
 body{
     margin:0px;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: blueviolet;
+    background-color: hsl(120, 50%, 58%);
+    color: white;
 }
+
 #topo{
-    background-color:gray;
+    background-color:hsl(0, 0%, 75%);
     width: 100%;
     padding: 40px;
-    color:white;
-    margin-right: 40px
+    color: hsl(0, 0%, 95%);
+    margin-right: 100%;
 }
+
+#topo a{
+    text-decoration-color:hsl(0, 0%, 75%);
+    margin-right: 40px;
+    color: hsl(0, 0%, 95%);
+}
+
 #centro{
 
     text-overflow: initial;
-    color:white;
+    color:hsl(246, 73%, 51%);
     width:100%;
     font-size: 400%;
     margin-right: 300px;
 }
-#fundo{
-    ;
+#centro:hover{
+    color:hsl(246, 73%, 20%);
 }
-#hoover:hover{
 
-color:blue
+/* #fundo{
+    color:white;
+} */
+
+#hoover:hover{
+font-optical-sizing: auto;
+color:hsl(246, 73%, 20%);
+}
+
+#textoentrada{
+  margin-left: 5%;
+  margin-top:5%
+}
+
+#atendimento{
+    margin-left: 3%;
 }
